# n-bodies

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/scripts/: record_example_simulation.py
.github/workflows/: generate-example-gif.yaml
src/: main.py
src/bodies/: __init__.py  body.py
src/record/: __init__.py  pygame_recorder.py
src/simulation/: __init__.py  n_body_simulation.py
